# chatbot-medical

./: .gitignore  Makefile  README.md  env_example  problem_statement.md  pyproject.toml  report.md  requirements.txt
.github/workflows/: lint.yml
.streamlit/: config.toml
approach1/: pyproject.toml
approach1/crewai_knowledge_chatbot/: README.md  crew.py  main.py  pyproject.toml  report.md
approach1/crewai_knowledge_chatbot/config/: agents.yaml  tasks.yaml
approach1/crewai_knowledge_chatbot/src/crewai_knowlege_chatbot/: crew.py  main.py
docs/: README.md  architectural_design.md  clinvec.md  continuous_development.md  evaluation.md  metrics.md  model_performance.md  ollama_installation.md  opensource_model_performance.md  preprocess.md  project_requirements.md  roadmap.md  unified_clinical_vocabulary_embeddings.md
evaluation/: README.md  app_chatbot.py  app_dataset_viewer.py  app_eval.py  app_response_viewer.py  dataset_generator.py  eval.py  llm_scorer.py  queries.md  score_plot.py
evaluation/chatbot_results/: llm_score_granite3_2_2b.csv  llm_score_granite3_3_2b.csv  llm_score_llama3_1_8b.csv  llm_score_llama3_2_3b.csv  llm_score_qwen3_1.7b.csv  llm_score_qwen3_8b.csv  metrics_melted.csv  results_granite3_2_2b.json  results_granite3_3_2b.json  results_llama3_1_8b.json  results_llama3_2_3b.json  results_qwen3_1.7b.json  results_qwen3_8b.json
evaluation/chatbot_results_v1/: llm_score_granite3_2_2b.csv  llm_score_granite3_3_2b.csv  llm_score_llama3_1_8b.csv  llm_score_llama3_2_3b.csv  llm_score_qwen3_1.7b.csv  llm_score_qwen3_8b.csv  results_granite3_2_2b.json  results_granite3_3_2b.json  results_llama3_1_8b.json  results_llama3_2_3b.json  results_qwen3_1.7b.json  results_qwen3_8b.json
evaluation/chatbot_results_v2/: llm_score_granite3_2_2b.csv  llm_score_granite3_3_2b.csv  llm_score_qwen3_1.7b.csv  llm_score_qwen3_8b.csv  results_granite3_2_2b.json  results_llama3_1_8b.json
evaluation/components/: document_loader.py  llm_manager.py  models.py
evaluation/configs/: batch_config.yaml  batch_config_granite1.yaml  batch_config_granite2.yaml  batch_config_llama1.yaml  batch_config_llama2.yaml  batch_config_qwen1.yaml  batch_config_qwen2.yaml
evaluation/datasets/: dataset_20250505_152908.json  dataset_20250505_153651.json  dataset_20250505_160122.json  dataset_20250507T000900.json  dataset_20250507T001404.json  dataset_20250507T001724.json
evaluation/src/: __init__.py  document_loader.py  llm_manager.py  models.py  qa_generator.py  utils.py
knowledge/: slamon1987.cache  slamon1987_claude.md  slamon1987_sentence_transformers_token.cache  slamon1987_short_recursive_character_pdfminer.cache  slamon1987_short_sentence_transformers_token.cache
logs/: chat.md  fact_check.md  report.md  research.md
src/chatbot_crewai/: crew.py  main.py
src/chatbot_crewai/config/: agents.yaml  tasks.yaml
src/chatbot_humana/: crew.py  main.py
src/chatbot_humana/config/: agents.yaml  tasks.yaml
src/chatbot_langchain/: app.py  batch.py
src/chatbot_langchain/components/: __init__.py  chat_engine.py  document_loader.py  gui_handler.py  llm_config.py
