[project]
name = "chatbot_humana"
version = "0.1.0"
description = "chatbot_humana using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.13"
dependencies = [
    "crewai[tools]>=0.118.0,<1.0.0",
    "streamlit>=1.45.0",
]

[project.scripts]
chatbot_humana = "chatbot_humana.main:run"
run_crew = "chatbot_humana.main:chat"
train = "chatbot_humana.main:train"
replay = "chatbot_humana.main:replay"
test = "chatbot_humana.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
