[project]
name = "approach1"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12.3"
dependencies = ["crewai>=0.118.0", "crewai-tools>=0.43.0"]


[project.scripts]
crewai_knowledge_chatbot = "crewai_knowledge_chatbot.main:run"
run_crew = "crewai_knowledge_chatbot.main:run"
train = "crewai_knowledge_chatbot.main:train"
replay = "crewai_knowledge_chatbot.main:replay"
test = "crewai_knowledge_chatbot.main:test"

[tool.crewai]
type = "crew"
