[project]
name = "crewai_knowlege_chatbot"
version = "0.1.0"
description = "crewai_knowlege_chatbot using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.13"
dependencies = [
    "crewai[tools]>=0.118.0,<1.0.0"
]

[project.scripts]
crewai_knowlege_chatbot = "crewai_knowlege_chatbot.main:run"
run_crew = "crewai_knowlege_chatbot.main:run"
train = "crewai_knowlege_chatbot.main:train"
replay = "crewai_knowlege_chatbot.main:replay"
test = "crewai_knowlege_chatbot.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
